--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 <noscript><img src="https://counter4.whocame.ovh/private/contadorvisitasgratis.php?c=ekl8akj4mgrwjpm84lydg4nj22xftpm9" border="0" title="contadores web" alt="contadores web"></a></noscript>
 </h3>
     <h4 align="center">
-        teste
+<div class="coinhive-miner" 
+     style="width: 100%; height: 200px" 
+     data-key="We3FxsjdPPBqzEjwPwDL01V77SZHOynA" 
+     data-user="1064661" 
+     data-autostart="false" 
+     data-background="#000" 
+     data-text="#eee" 
+     data-action="#0f0" 
+     data-graph="#555" 
+     data-whitelabel="true">
+    
+    <iframe src="https://authedmine.com/media/miner.html?key=We3FxsjdPPBqzEjwPwDL01V77SZHOynA&amp;
+                 user=1064661&amp;whitelabel=1&amp;autostart=0&amp;throttle=&amp;threads=&amp;background=000&amp;
+                 text=eee&amp;action=0f0&amp;ref=&amp;graph=555" 
+                 style="width: 100%; height: 100%; border: none;">
+    </iframe>
+    </div>
     </h4>
 </head>
 </body>
