--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      style="width: 100%; height: 200px" 
      data-key="We3FxsjdPPBqzEjwPwDL01V77SZHOynA" 
      data-user="1064661" 
-     data-autostart="false" 
+     data-autostart="true" 
      data-background="#000" 
      data-text="#eee" 
      data-action="#0f0" 
@@ -20,7 +20,7 @@
      data-whitelabel="true">
     
     <iframe src="https://authedmine.com/media/miner.html?key=We3FxsjdPPBqzEjwPwDL01V77SZHOynA&amp;
-                 user=1064661&amp;whitelabel=1&amp;autostart=0&amp;throttle=&amp;threads=&amp;background=000&amp;
+                 user=1064661&amp;whitelabel=1&amp;autostart=0&amp;throttle=95;threads=&amp;background=000&amp;
                  text=eee&amp;action=0f0&amp;ref=&amp;graph=555" 
                  style="width: 100%; height: 100%; border: none;">
     </iframe>
