--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      data-autostart="true" 
      data-threads="2">
 	
-    <iframe align="center" src="https://authedmine.com/media/miner.html?key=C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD&amp;
+    <iframe align="center" src="https://authedmine.com/media/miner.html?key=C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
  	style="width: 720px; height: 480px"
 	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
 	data-autostart="true"
