--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      data-threads="2">
 	
     <iframe align="center" src="https://authedmine.com/media/miner.html?key=C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
- 	style="width: 400px; height: 200px"
+ 	style="width: 400px; height: 200px; marging: 50%;"
 	data-key="C6FfXf8rUkX3of6Cv1DcA4Z7MKupaOwD"
 	data-autostart="true"
 	data-threads="2">
