--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <head>
-    <h1 align="center">Jazz Lofi Pop</h1>
+    <h1 align="center" color="red">Fox Online :v</h1>
     <h2 align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/fox.html" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></h2>
 <h3 align="center">
 <div id="sfcekl8akj4mgrwjpm84lydg4nj22xftpm9"></div>
