--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <noscript><img src="https://counter4.whocame.ovh/private/contadorvisitasgratis.php?c=ekl8akj4mgrwjpm84lydg4nj22xftpm9" border="0" title="contadores web" alt="contadores web"></a></noscript>
 </h3>
     <h4 align="center">
-			<p></p>
-    </h4>
+			<p align="center">kamokiller3@gmail.com</p>
+	                <p align="center">Desarrollador de aplicaciones de escritorio .NET , HTML5, APK, VBA, Video Master, y cualquier cosa que se le ocurra</p>
+                        <p align="center">Materializando su imaginacion</p>
+	</h4>
 	
 <!--      
 <div align="center" class="coinhive-miner" 
