--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </h3>
     <h4 align="center">
 			<p align="center">kamokiller3@gmail.com</p>
-	                <p align="center">Desarrollador de aplicaciones de escritorio .NET , HTML5, APK, VBA, Video Master, y cualquier cosa que se le ocurra</p>
+	                <p align="center">Desarrollador de aplicaciones de escritorio .NET , HTML5, APK, VBA, Video Master, y cualquier cosa que se le ocurra // Full Stack(Back & Front)</p>
                         <p align="center">Materializando su imaginacion</p>
 	</h4>
 	
