--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <p align="center">Materializando su imaginacion</p>
 	</h4>
 	
-    <div align="center" color="red">Fox Online :v</div>
+    <div align="center" color="red">Space O online :v</div>
     <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 
 <!--      
