--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     <div align="center" color="red">Space O online :v</div>
     <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
 
+	
+	
+	
+	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3414782071587143",
+    enable_page_level_ads: true
+  });
+</script>
 <!--      
 <div align="center" class="coinhive-miner" 
      style="width: 400px; height: 200px" 
