--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 	
 <p>1</p>
+	
+	<iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/bitcoincore/?ref=008B37314189&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
 		
 <!--      
 <div align="center" class="coinhive-miner" 
