--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
  
     <h1 align="center" color="red">Fox Online :v</h1>
-    <h2 align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/fox.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></h2>
-<h3 align="center">
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/fox.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+<div align="center">
 <div id="sfcekl8akj4mgrwjpm84lydg4nj22xftpm9"></div>
 <script type="text/javascript" src="https://counter4.whocame.ovh/private/counter.js?c=ekl8akj4mgrwjpm84lydg4nj22xftpm9&down=async" async></script>
 <noscript><img src="https://counter4.whocame.ovh/private/contadorvisitasgratis.php?c=ekl8akj4mgrwjpm84lydg4nj22xftpm9" border="0" title="contadores web" alt="contadores web"></a></noscript>
-</h3>
-    <h4 align="center">
+</div>
+    <div align="center">
 			<p align="center">kamokiller3@gmail.com</p>
 	                <p align="center">Desarrollador de aplicaciones de escritorio .NET , HTML5, APK, VBA, Video Master, y cualquier cosa que se le ocurra // Full Stack(Back & Front)</p>
                         <p align="center">Materializando su imaginacion</p>
-	</h4>
+	</div>
 	
     <div align="center" color="red">Space O online :v</div>
     <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
-
+    
+    <div align="center" color="red">Simpsons 24*7 :v</div>
+    <div align="center"><iframe width="720" height="480" src="https://www.facebook.com/2164666663773707/videos/462102160943561" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
 	
-<p>1</p>
-	
-	<iframe scrolling="no" frameborder="0" src="https://coinpot.co/mine/bitcoincore/?ref=008B37314189&mode=widget" style="overflow:hidden;width:324px;height:470px;"></iframe>
-		
+<p>1</p>		
 <!--      
 <div align="center" class="coinhive-miner" 
      style="width: 400px; height: 200px" 
