--- a/index.html
+++ b/index.html
@@ -18,9 +18,22 @@
     <div align="center" color="red">Space O online :v</div>
     <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
     
-    <div align="center" color="red">Simpsons 24*7 :v</div>
-    <div align="center"><iframe width="720" height="480" src="blob:https://www.facebook.com/3b1f140e-d46f-4637-98b5-d40d342bba0b" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
-	
+    <div align="center" color="red">Canal Caracol</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/caracol.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div align="center" color="red">Canal RCN</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/rcn.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div align="center" color="red">Win Sports</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/win.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div align="center" color="red">TnT Channel HD</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/tnt.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div align="center" color="red">Universal Channel HD</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/universalc.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div align="center" color="red">Warner Channel</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/warner.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div align="center" color="red">FX HD En vivo</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/fx.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div align="center" color="red">Space O</div>
+    <div align="center"><iframe width="720" height="480" src="http://player.latino-webtv.com/channels/space.html" frameborder="0" allow="kutoplay; encrypted-media" allowfullscreen></iframe></div>								
 <p>1</p>		
 <!--      
 <div align="center" class="coinhive-miner" 
