--- a/paramount.html
+++ b/paramount.html
@@ -14,7 +14,13 @@
 
 <h1 align="center" color="red">Paramount</h1>
 <iframe width="720" height="480" allowfullscreen frameborder="0" src="https://vercanalestv1.com/ver-paramount-channel-en-directo-y-gratis-online-las-24h-en-vivo/"></iframe>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3414782071587143",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 </body>
 </html>
