--- a/paramount.html
+++ b/paramount.html
@@ -1,26 +1,1 @@
-<html>
-<body>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css">
-
-<div align="center">
-<button class="button" onclick="window.location.href='fox.html'">FOX</button>
-<button class="button button2" onclick="window.location.href='caracol.html'">Caracol HD</button>
-<button class="button button3" onclick="window.location.href='paramount.html'">Paramount</button>
-<button class="button button4" onclick="window.location.href='cinemax.html'">Cinemax</button>
-<button class="button button5" onclick="window.location.href='tnt.html'">TNT Channel</button>
-<button class="button button6" onclick="window.location.href='venus.html'">Venus</button>
-<div>
-
-<h1 align="center" color="red">Paramount</h1>
-<iframe width="720" height="480" allowfullscreen frameborder="0" src="https://vercanalestv1.com/ver-paramount-channel-en-directo-y-gratis-online-las-24h-en-vivo/"></iframe>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-3414782071587143",
-    enable_page_level_ads: true
-  });
-</script>
-</head>
-</body>
-</html>
+<iframe allowfullscreen="true" src="https://mixer.com/embed/player/YaGaM1lx?vod=75165705" width="620" height="349"> </iframe>
