--- a/paramount.html
+++ b/paramount.html
@@ -1,1 +1,1 @@
-<iframe allowfullscreen="true" src="https://mixer.com/embed/player/YaGaM1lx?vod=75165705" width="1366" height="768"> </iframe>
+<iframe src="https://player.twitch.tv/?channel=gamesdonequick" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/gamesdonequick?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from GamesDoneQuick on www.twitch.tv</a>
