--- a/paramount.html
+++ b/paramount.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.twitch.tv/?channel=gamesdonequick" frameborder="0" allowfullscreen="true" scrolling="no" height="1920" width="1080"></iframe><a href="https://www.twitch.tv/gamesdonequick?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from GamesDoneQuick on www.twitch.tv</a>
+<iframe src="https://player.twitch.tv/?channel=gamesdonequick" frameborder="0" allowfullscreen="true" scrolling="no" height="1920" width="1080">
