--- a/paramount.html
+++ b/paramount.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.twitch.tv/?channel=gamesdonequick" frameborder="0" allowfullscreen="true" scrolling="no" height="720" width="480">
+<iframe src="https://player.twitch.tv/?channel=gamesdonequick" frameborder="0" allowfullscreen="true" scrolling="no" width="1366" height="768" >
