--- a/paramount.html
+++ b/paramount.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.twitch.tv/?volume=0.7&!muted&channel=yagam1lx_" frameborder="0" allowfullscreen="true" scrolling="no" width="1366" height="768" >
+<iframe allowfullscreen="true" src="https://mixer.com/embed/player/YaGaM1lx?disableLowLatency=1" width="1080" height="1920"> </iframe>
